...
                        }
                        
                        Task {
                            viewModel.search(term: searchTerm)
                        }
                    }
                    .navigationTitle("Search")
                    .accessibility(identifier: "home.searchField")

            }
            .sheet(item: $selectedDrink) { drink in
                DetailView(viewModel: DetailVM(drinkId: drink.id))
            }
        }
...
