...
        
        VStack(spacing: 0) {
            HStack {
                Button(action: {
                    dismiss()
                }) {
                    Image("DismissIcon")
                        .padding()
                }
                
                Spacer()
                
                Button(action: {}) {
...
